<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.fragments.MovieFragment">

    <ImageView
        android:id="@+id/movieIcon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/no_image_icon_"
        app:layout_constraintBottom_toTopOf="@+id/movieTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/movie_title_placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieIcon" />

    <TextView
        android:id="@+id/movieYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/year"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <TextView
        android:id="@+id/actualYear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/movieYear"
        app:layout_constraintStart_toEndOf="@+id/movieYear" />

    <TextView
        android:id="@+id/movieRating"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:text="@string/rating"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieYear"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/actualRating"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/movieRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movieRating"
        app:layout_constraintTop_toTopOf="@+id/movieRating" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageShareButton">

        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="20sp" />
    </ScrollView>

    <ImageButton
        android:id="@+id/imagePlayButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:src="@drawable/ic_baseline_slow_motion_video_24"
        app:layout_constraintEnd_toStartOf="@+id/imageShareButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieRating"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/imageShareButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@+id/imagePlayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imagePlayButton"
        app:tint="@color/black" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/save_to_favorites"
        android:src="@drawable/heart"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />


</androidx.constraintlayout.widget.ConstraintLayout>